--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "003_Food-dist",
+  "name": "health_food_delivery",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node script.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
