--- a/package.json
+++ b/package.json
@@ -1,14 +1,30 @@
 {
-	"name": "health_food_delivery",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"start": "node script.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {}
+  "name": "health_food_delivery",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node script.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^8.22.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nekom113/health_food_delivery.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nekom113/health_food_delivery/issues"
+  },
+  "homepage": "https://github.com/nekom113/health_food_delivery#readme",
+  "dependencies": {
+    "axios": "^0.27.2",
+    "json-server": "^0.17.0"
+  }
 }
